# steam-watch

./: .gitignore  LICENSE  README.md  pyproject.toml  scrapy.cfg
.github/: dependabot.yaml
.github/workflows/: test.yaml  watch.yaml
src/corpus_convert/: __main__.py
src/email_render/: __main__.py  render.py
src/message_render/: __main__.py  render.py
src/schedule_parser/: __main__.py  collection.py  memory_db.py  parser.py  query.py
src/templates/: message.jinja2.md  ntfy-message.jinja2.txt
steam_watch/: items.py  middlewares.py  pipelines.py  settings.py
steam_watch/spiders/: steam_trains.py
tests/email_render/: test_render.py
tests/schedule_parser/: test_collection.py  test_memory_db.py  test_parser.py
