[project]
name = "steam-watch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "jinja2-cli>=0.8.2",
 "scrapy>=2.13.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
 "isort>=6.0.1",
 "pytest>=8.4.1",
 "pytest-cov>=6.2.1",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests", "integration"]
pythonpath = "src"
